src/less/style.less
// main layout styling
html,
body {
  margin: 0;
  padding: 0;
  font-size: 1.05em;
  height: 100%;
}

#wrap {
  min-height: 100%;
  position: relative;
}
#wrap:last-child {
  padding-bottom: (40 + @footer-top-padding * 2 + @footer-height);
}

header {
  padding-top: 5px;
}

footer, header {
  font-family: 'Dosis', sans-serif;
  color: white;
  background: #141414;

  a {
    color: #DDDDDD;
    &:hover {
      color: #FFFFFF;
      text-decoration: none;
    }
    font-size: 2.25em;
    &.social {
      font-size: 1.85em;
    }
  }
  ul, li {
    margin-bottom: 0;
    display: inline;
  }
  li {
    margin: 0 0.55em;
  }
}

header a {
  font-size: 1.75em;
}

footer {
  padding: @footer-top-padding 0;
  position:absolute;
  bottom:0;
  width: 100%;
  text-align: center;
}

h1 {
  text-transform: capitalize;
  text-align: center;

  &:after {
    font-family: FontAwesome;
    content: '\A\f192';
    white-space: pre;
    color: #ccc;
    font-size: @font-size-h4;
  }
}

h4, h5, h6 {
  margin-top: 0px;
}

ul, ol {
  margin-left:0;
  margin-right: -1.5em;
  padding-left:1.5em;
  position:relative;
  left:-1.5em;
}

hr {
  margin-bottom: 2.5em;
  margin-top: 2.5em;
  max-width: 400px;
}

.btn,
.nav > li > a,
.nav-pills > li > a {
  font-family: @font-family-sans-serif;
}

.center {
  text-align: center;
}
.justify {
  text-align: justify;
}

@vertical-height: 400px;
.vertical-center-parent {
  position: relative;
}
.vertical-center {
  height: @vertical-height;
  margin-top: (@vertical-height / -2);
  position: absolute;
  top: 50%;
}

@footer-height: 80px;
@footer-top-padding: 15px;

@slalom-blue: #003a63;
.slalom {
  color: white;
  font-size: @font-size-large;
  background-color: @slalom-blue;
  padding-top: 10px;
  padding-bottom: 10px;

  @slalom-shadow-blur: 5px;
  @slalom-shadow-spread: -8px;
//  box-shadow: inset 0px 17px @slalom-shadow-blur @slalom-shadow-spread #fff,
//    inset 0px -17px @slalom-shadow-blur @slalom-shadow-spread #fff;
}

a {
  &:hover {
    text-decoration: none;
  }
  .logo {
    background: no-repeat center;
    background-size: contain;
    height: 300px;
    padding: 1em;
  }
}

a.dark-contrast {
  text-decoration: none;
  color: #dddddd;

  &:hover {
    color: #ffffff;
    text-decoration: none;
  }
}

// subtle header (like for ryankoval.com)
.subtle-header {
  font-family: 'Dosis', sans-serif !important;
  font-style: normal;
  font-weight: 300;
  font-size: 2.3em;
  text-transform: none;
  text-decoration: none;
  letter-spacing: -0.037em;
  word-spacing: -0.02em;
  line-height: 1.24;
}

.thumbnail-bottom {
  position: relative;
  height: 300px;
  img {
    bottom: 0px;
    max-height: 100%;
    margin: auto;
    padding: 25px 15px 0px 15px;
  }
}

.narrow-container {
  max-width: 900px;
}

.description {
  position: relative;

  &:before, &:after {
    position: absolute;
    font-size: 2.5em;
  }
  &:before {
    content: '\201C';
    left: -0.45em;
    top: -16px;
  }
  &:after {
    content: '\201D';
    right: -22px;
    bottom: -28px;
  }
}

.experience {
  h1, h2, h3, h4, h5 {
    small {
      &+small {
        padding-top: 0.15em;
      }
      display: block;
    }
  }
  h2 {
    small {
      font-size: 55%;
    }
  }
  .col-lg-4 > .thumbnail-bottom {
    height: 250px;
  }
  .row {
    padding-bottom: 15px;
  }

  .gutter {
    padding: 0 25px;
  }

  .caption h4 {
    margin-bottom: 0;
    &:last-of-type {
      margin-bottom: (@line-height-computed / 2);
    }
  }

  ul {
    list-style: none;

    li:before {
      font-family: 'FontAwesome';
      content: '\f101';
      margin:0 7px 0 -15px;
      font-size: 0.8em;
    }
  }


  .info {
    max-height: 290px;
    position: relative;
    overflow: hidden;

    .show-more {
      width: 100%;
      height: 150px;
      z-index: 99;
      position: absolute;
      bottom: 0px;
      background: url("/images/bottom-fade.png") bottom center repeat;
      a {
        position: absolute;
        bottom: 0px;
        width: 100%;
        text-align: center;
      }
    }
  }
}

.jumbotron {
  color: #FFFFFF;
  background: #141414 url("/images/jumbo.jpg") no-repeat;
  background-position: center center;
  background-size: cover;
  background-attachment: fixed;
  min-height: 650px;

  .headerFont() {
    font-family: 'Enriqueta', cursive;
    font-weight: 700;
  }

  h1 {
    .headerFont();
    text-shadow: 2px 3px #3F3F3F;
    font-size: 18.35vmin;
    letter-spacing: -.025em;
  }
  h3 {
    .headerFont();
    font-size: 3em;
    color: #eee;
    margin-top: 0px;
    margin-bottom:20px;
    text-align: center;
  }
}

a.icon {
  &:hover {
    text-decoration: none;
  }

  div.img {
    height: 143px;
    width: 100%;
    margin: 0.8em;
    background: no-repeat center;
    background-size: contain;

  }
}

.grayscale {
  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+, IE10 */
  filter: gray; /* IE6-9 */
  -webkit-filter: grayscale(90%); /* Chrome 19+ & Safari 6+ */
  -webkit-transition: all .6s ease; /* Fade to color for Chrome and Safari */
  -webkit-backface-visibility: hidden; /* Fix for transition flickering */

  &:hover {
    filter: none;
    -webkit-filter: grayscale(0%);
  }
}
/*

// serif body
.serif-body {
  font-family: 'Average', serif;
  font-style: normal;
  font-weight: 400;
  font-size: 13px;
  text-transform: none;
  text-decoration: none;
  letter-spacing: 0em;
  word-spacing: 0em;
  line-height: 1.4;
}

.serif-header {
  font-family: 'Habibi', serif;
  font-style: normal;
  font-weight: 400;
  font-size: 36px;
  text-transform: none;
  text-decoration: none;
  letter-spacing: 0em;
  word-spacing: 0em;
  line-height: 1.4;
bower_components}*/

